# Meta-Lang

./: README.md  hello.tl  pyproject.toml
languages/: twilang.yml
metalang/: cli.py
metalang/commands/: build.py  init.py  publish.py  run.py
metalang/utils/: _to_file.py  file_checker.py  parser.py
